// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Goals API POST upserts (creates): create 1`] = `
{
  "__v": "<__v>",
  "_id": "<_id>",
  "amount": 10000,
  "context": "Personal",
  "createdAt": "<createdAt>",
  "month": "2026-05",
  "updatedAt": "<updatedAt>",
  "userId": "<userId>",
}
`;

exports[`Goals API POST upserts (updates existing for same profile+month): list-after-upsert 1`] = `
[
  {
    "__v": "<__v>",
    "_id": "<_id>",
    "amount": 15000,
    "context": "Personal",
    "createdAt": "<createdAt>",
    "month": "2026-05",
    "updatedAt": "<updatedAt>",
    "userId": "<userId>",
  },
]
`;
